--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <p>maaf yah aku cuman bisa bikin ini </p>
             <p>ini pun tutorial wkwkw </p>
             <p>eh apa aku buat di send the song yah </p>
-            <p>tp selamat yg ke 17 yah mumuupp </p>
+            <p>selamat yg ke 17 yah mumuupp aku </p>
             <p>semoga panjang umur sehat selalu </p>
             <p>semangat juga btw </p>
             <p>jadi tukang wifi gitu mupp </p>
@@ -42,3 +42,4 @@
 </body>
 
 </html>
+            
